# fastapi-easy

./: .gitignore  .pre-commit-config.yaml  13-caching.md  404.html  ADDITIONAL_RISK_SCAN.md  ADVANCED_CODE_ANALYSIS.md  ALIGNMENT_ANALYSIS.md  ALIGNMENT_WITH_LIBRARY_GOALS.md  ANALYSIS_DOCS_AND_EXAMPLES.md  AUDIT_AND_FIX_SUMMARY.md  CI_CD_IMPLEMENTATION.md  CI_CD_STATUS_CHECK.md  CLEANUP_ASSESSMENT.md  CODE_QUALITY_AUDIT.md  CODE_QUALITY_FINAL_REPORT.md  CODE_REVIEW_FINAL.md  CODE_REVIEW_FINDINGS.md  CODE_REVIEW_SUMMARY.md  COMPLETION_ANALYSIS.md  COMPLETION_REPORT.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_CODE_REVIEW.md  CONNECTION_LEAK_SOLUTION.md  CONTINUATION_FIXES_SUMMARY.md  CONTINUATION_SUMMARY.md  CRITICAL_CLARIFICATION.md  DEEP_CODE_ANALYSIS.md  DEEP_CODE_REVIEW.md  DEEP_EVALUATION_REPORT.md  DESIGN_CONSISTENCY_AUDIT.md  DESIGN_DEEP_ANALYSIS.md  DEVELOPMENT_AND_DOCUMENTATION_PLAN.md  DEVELOPMENT_PROGRESS.md  DOCUMENTATION.md  DOCUMENTATION_ANALYSIS_REPORT.md  DOCUMENTATION_CLEANUP.md  DOCUMENTATION_CODE_EXAMPLES_VERIFICATION.md  DOCUMENTATION_FIX_EXECUTION.md  DOCUMENTATION_PHASE2_PLAN.md  DOCUMENTATION_PHASE3_PLAN.md  (+126 more)
.github/workflows/: ci.yml  deploy-docs.yml  lint.yml  test.yml  tests.yml
.windsurf/workflows/: README.md  code-quality-check.md  doc-analysis-sync.md  run-tests-and-fix.md
DOCUMENTATION_GAP_ANALYSIS/: index.html
DOCUMENTATION_REFACTOR_PLAN/: index.html
FEATURES/: index.html
MIGRATION_IMPLEMENTATION_STATUS/: index.html
SCHEMA_MIGRATION_ULTIMATE_DESIGN/: index.html
adapters/: index.html
adapters/mongodb/: index.html
adapters/sqlalchemy/: index.html
adapters/sqlmodel/: index.html
adapters/tortoise/: index.html
development/contributing/: index.html
development/testing/: index.html
docs/: ANALYSIS_COMPLETE_WORKFLOW.md  ARCHIVE.md  CODE_DESIGN_ANALYSIS.md  CONTRIBUTING.md  DEVELOPMENT.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION_REFACTORING_PLAN.md  DOCUMENTATION_REFACTOR_PLAN.md  DOCUMENTATION_STANDARDS.md  ERROR_HANDLING_GUIDE.md  ERROR_HANDLING_MIGRATION.md  FEATURES.md  IMPORT_OPTIMIZATION_REPORT.md  IMPORT_OPTIMIZATION_SUMMARY.md  INCIDENT_RESPONSE_PROCEDURES.md  LOGGING_GUIDE.md  MIGRATION_IMPLEMENTATION_STATUS.md  NAVIGATION.md  NEXT_STEPS.md  OPTIMIZATION_GUIDE.md  POTENTIAL_ISSUES_ANALYSIS.md  PROJECT_ANALYSIS.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PROGRESS.md  SCHEMA_MIGRATION_ULTIMATE_DESIGN.md  SECURITY_ASSESSMENT_REPORT.md  SECURITY_AUDIT_REPORT.md  SECURITY_BEST_PRACTICES.md  SECURITY_COMPLIANCE_CHECKLIST.md  TESTING_BEST_PRACTICES.md  TESTING_GUIDE.md  TEST_OPTIMIZATION_GUIDE.md  TEST_REPORT.md  TYPE_ANNOTATION_GUIDELINES.md  architecture-decisions.md  architecture-review.md  bug-fixes.md  cost_optimization_strategies.md  getting-started.md  (+4 more)
docs/adapters/: index.md  mongodb.md  sqlalchemy.md  sqlmodel.md
docs/architecture/: data-flow.md  index.md  optimization-summary.md
docs/archive/: CODE_DESIGN_ANALYSIS.md  NEXT_STEPS.md  PROJECT_STATUS.md
docs/best-practices/: code-organization.md  index.md  performance.md  testing.md
docs/contributing/: development.md  index.md
docs/guides/: bulk-operations.md  caching.md  graphql-integration.md  graphql.md  hooks-advanced.md  index.md  migrations.md  permissions-basic.md  querying.md  soft-delete.md  websocket-integration.md  websocket.md
docs/reference/: api.md  architecture.md  cli.md  configuration.md  data-flow.md  hooks.md  index.md
docs/security/: 01-authentication.md  02-permissions.md  04-audit-logging.md  07-resource-checker.md  08-permission-engine.md  09-security-config.md  index.md  multi-tenancy.md  password-rate-limit.md  permission-loader.md  security-best-practices.md  security-config.md
docs/stylesheets/: extra.css
docs/tutorial/: 01-quick-start.md  02-database-integration.md
docs/tutorials/: index.md
docs/usage/: 01-quick-start.md  02-databases.md  03-data-flow.md  04-filters.md  05-sorting.md  07-architecture.md  08-complete-example.md  08-error-handling.md  09-error-handling.md  09-soft-delete.md  11-permissions.md  12-audit-logging.md  13-caching.md  14-configuration.md  14-rate-limiting.md  15-graphql.md  15-testing.md  16-websocket.md  17-cli-tools.md  18-graphql.md  19-websocket.md  20-performance-tuning.md  21-best-practices.md  21-database-migrations.md  22-deployment.md  23-troubleshooting.md  INDEX-NEW.md  INDEX.md  README.md
docs/user-guide/: index.md
docs/过时/: CODE_METRICS.md  CODE_QUALITY_AUDIT.md  OPTIMAL_SOLUTION_ENHANCED.md  SECURITY_AUDIT.md
examples/: 01_hello_world.py  02_with_database.py  03_with_queries.py  04_advanced_features.py  05_complete_ecommerce.py  06_with_permissions.py  07_with_permission_loader.py  08_with_resource_checker.py  09_with_permission_engine.py  README.md  ecommerce_api.py  migration_basic.py  migration_hooks.py  mongo_example.py  security_example.py  simple_example.py  sqlmodel_example.py  utils.py
examples/architecture/: 01_new_architecture_demo.py  02_plugin_example.py
guides/audit-logging-basic/: index.html
guides/best-practices/: index.html
guides/bulk-operations/: index.html
guides/error-handling/: index.html
guides/graphql/: index.html
guides/migrations/: index.html
guides/permissions-basic/: index.html
guides/querying/: index.html
guides/soft-delete/: index.html
project_docs/: FEATURES.md  MIGRATION_IMPLEMENTATION_STATUS.md  REFACTORING_SUMMARY.md
scripts/: baseline_performance.json  build-docs.bat  build-docs.sh  check_dependencies.py  fix_imports.py  fix_types.py  measure_import_performance.py  optimize_imports.py  optimize_test_performance.py  run_security_audit.py  run_tests_and_fix.py  setup_optimized_testing.py
search/: search_index.json
security/: index.html
stylesheets/: extra.css
tests/: conftest.py  conftest_improved.py  conftest_optimized.py  conftest_password.py  test_e2e_migration.py  test_hooks.py  test_migration_engine.py  test_risk_engine.py  test_security_audit_storage.py  test_security_decorators.py  test_security_improvements.py  test_security_jwt_auth.py  test_security_multi_tenant.py
文档问题总结/: index.html
(+339 files in other folders)
