[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-easy"
version = "0.1.6"
description = "Production-ready FastAPI framework with automatic CRUD generation, enterprise security, and intelligent schema migrations"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "AGPL-3.0"}
authors = [
    {name = "FastAPI-Easy Team", email = "1339731209@qq.com"}
]
keywords = [
    "fastapi",
    "crud",
    "orm",
    "migration",
    "security",
    "authentication",
    "authorization",
    "multi-tenant",
    "audit-log"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/ardss/fastapi-easy"
Documentation = "https://ardss.github.io/fastapi-easy/"
Repository = "https://github.com/ardss/fastapi-easy.git"
Issues = "https://github.com/ardss/fastapi-easy/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.20.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
    "mypy>=0.990",
    "pre-commit>=2.0",
    "pylint>=2.15.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
]
sqlalchemy = ["sqlalchemy>=2.0", "aiosqlite>=0.19.0"]
tortoise = ["tortoise-orm>=0.20.0"]
mongo = ["motor>=3.0", "pymongo>=4.0"]
sqlmodel = ["sqlmodel>=0.0.8"]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.5.0",
    "pymdown-extensions>=9.0",
]

[tool.setuptools]
packages = ["fastapi_easy"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
known_first_party = ["fastapi_easy"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/fastapi_easy --cov-report=html --cov-report=term --cov-report=xml -v -W ignore::DeprecationWarning -W ignore::PendingDeprecationWarning -W ignore::FutureWarning"
asyncio_mode = "auto"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
]

[tool.coverage.run]
source = ["src/fastapi_easy"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
