[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-easy"
dynamic = ["version"]
description = "Production-ready FastAPI framework with automatic CRUD generation, enterprise security, and intelligent schema migrations"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.9"
authors = [
    {name = "FastAPI-Easy Team", email = "1339731209@qq.com"},
    {name = "ruvnet", email = "ruvnet@ruv.io"}
]
maintainers = [
    {name = "ruvnet", email = "ruvnet@ruv.io"}
]
keywords = [
    "fastapi",
    "crud",
    "orm",
    "migration",
    "security",
    "authentication",
    "authorization",
    "multi-tenant",
    "audit-log",
    "api",
    "web",
    "framework"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
all = [
    "fastapi-easy[dev,sqlalchemy,tortoise,mongo,sqlmodel,docs,security,monitoring]"
]

dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.3.0",
    "httpx>=0.25.0",
    "factory-boy>=3.3.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "pylint>=2.17.0",
    "bandit[toml]>=1.7.0",
    "safety>=2.3.0",
    "vulture>=2.7",
    "pydocstyle>=6.3.0",
    "toml>=0.10.2",
    "rich>=13.5.0",
    "ipython>=8.14.0",
]

sqlalchemy = [
    "sqlalchemy>=2.0.20",
    "aiosqlite>=0.19.0",
    "alembic>=1.12.0",
]

tortoise = [
    "tortoise-orm>=0.20.0",
    "aiosqlite>=0.19.0",
]

mongo = [
    "motor>=3.3.0",
    "pymongo>=4.5.0",
    "beanie>=1.21.0",
]

sqlmodel = [
    "sqlmodel>=0.0.8",
    "sqlalchemy>=2.0.20",
]

security = [
    "PyJWT>=2.8.0",
    "bcrypt>=4.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=41.0.0",
]

monitoring = [
    "prometheus-client>=0.17.0",
    "structlog>=23.1.0",
    "sentry-sdk[fastapi]>=1.32.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.2.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
    "mkdocstrings[python]>=0.22.0",
    "pymdown-extensions>=10.0.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
]

testing = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.3.0",
    "httpx>=0.25.0",
    "factory-boy>=3.3.0",
    "faker>=19.0.0",
]

[project.urls]
Homepage = "https://github.com/ardss/fastapi-easy"
Documentation = "https://fastapi-easy.readthedocs.io/"
Repository = "https://github.com/ardss/fastapi-easy.git"
"Bug Tracker" = "https://github.com/ardss/fastapi-easy/issues"
Changelog = "https://github.com/ardss/fastapi-easy/blob/main/CHANGELOG.md"
Discussions = "https://github.com/ardss/fastapi-easy/discussions"

[project.scripts]
fastapi-easy = "fastapi_easy.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["fastapi_easy"]
include-package-data = true
zip-safe = false

[tool.setuptools_scm]
write_to = "src/fastapi_easy/_version.py"
local_scheme = "no-local-version"

[tool.setuptools.package-data]
fastapi_easy = ["py.typed", "*.pyi", "**/*.pyi"]

# Black configuration
[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

# Ruff configuration (replaces flake8, isort, and many others)
[tool.ruff]
target-version = "py39"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "PGH", # pygrep-hooks
    "RUF", # Ruff-specific rules
    "TRY", # tryceratops
    "PERF", # perflint
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "TRY003", # avoid specifying long messages outside the exception class
    "TRY301", # raise within try
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG", "PTH", "S", "B", "PLR", "TRY"]
"docs/*" = ["ALL"]

[tool.ruff.isort]
known-first-party = ["fastapi_easy"]
required-imports = ["from __future__ import annotations"]
split-on-trailing-comma = true
combine-as-imports = true

# MyPy configuration
[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "alembic.*",
    "motor.*",
    "pymongo.*",
    "tortoise.*",
    "beanie.*",
    "factory_boy.*",
    "yaml.*",
    "pandas.*",
    "psutil.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/fastapi_easy",
    "--cov-report=html:htmlcov",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=85",
    "-v",
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
    "--tb=short",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "unit: mark test as unit test (fast, isolated)",
    "integration: mark test as integration test (requires external resources)",
    "e2e: mark test as end-to-end test (slow, full flow)",
    "performance: mark test as performance test (benchmark, load testing)",
    "slow: mark test as slow to run (deselect with '-m \"not slow\"')",
    "requires_db: mark test as requiring database connection",
    "requires_redis: mark test as requiring Redis connection",
    "requires_auth: mark test as requiring authentication setup",
    "security: mark test as security-related test",
    "migration: mark test as migration-related test",
    "smoke: mark test as smoke test",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/fastapi_easy"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/migrations/*",
    "*/venv/*",
    "*/virtualenv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "@overload",
]
show_missing = true
precision = 2

# Bandit security configuration
[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]  # assert_used and shell_injection_permitted

# Pydocstyle configuration
[tool.pydocstyle]
convention = "google"
add-ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
]
match-dir = "(?!test).*"
match = "^(?!test_).*\\.py$"

# Pylint configuration
[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0613",  # unused-argument
    "W0621",  # redefined-outer-name
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-complexity = 10
max-locals = 15
max-args = 7
max-returns = 6
max-branches = 12
max-statements = 50

# Vulture configuration (finds unused code)
[tool.vulture]
paths = ["src", "tests"]
exclude = ["*_test.py", "test_*.py", "conftest.py"]
min_confidence = 80

# Safety configuration
[tool.safety]
ignore = []

# Factory Boy configuration
[tool.factory_boy]
debug_mode = false